Minor text updates

--- a/roadtofosdem/index.html
+++ b/roadtofosdem/index.html
@@ -27,32 +27,17 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Road to FOSDEM</a>
-            </div>
-            <!--/.navbar-collapse -->
-        </div>
-    </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
             <h1>Road to FOSDEM</h1>
             <p>
-                <img class="img" src="https://secure.meetupstatic.com/photos/event/c/4/d/9/highres_488150393.jpeg" />
+                <img class="img" src="https://secure.meetupstatic.com/photos/event/c/4/d/9/highres_488150393.jpeg" width="40%" />
             </p>
-            <p>Road to FOSDEM is a selection of meetups leading up to the FOSDEM conference in Brussels. Selection done
+            <p>Road to FOSDEM is a selection of meetups leading up to the <a  href="https://fosdem.org/" target="_blank">FOSDEM conference</a> in Brussels. Selection done
                 by Microsoft the Netherlands & Belgium.</p>
-            <p><a class="btn btn-link btn-lg" href="https://twitter.com/search?q=%23roadtoFOSDEM">#roadtoFOSDEM</a></p>
+            <p>Engage with us on Twitter: <a href="https://twitter.com/search?q=%23roadtoFOSDEM">#roadtoFOSDEM</a></p>
         </div>
     </div>
 
@@ -107,7 +92,7 @@
         <hr>
 
         <footer>
-            <p>&copy; 2016 Company, Inc.</p>
+            <p>&copy; 2020 Microsoft</p>
         </footer>
     </div> <!-- /container -->
 
