Add details for Brussels meetup

--- a/roadtofosdem/index.html
+++ b/roadtofosdem/index.html
@@ -80,9 +80,13 @@
                 <h2>Brussels (31/01)</h2>
                 <img class="img" src="https://secure.meetupstatic.com/photos/theme_head/5/3/e/0/full_7461472.jpeg"
                     width="70%" alt="Docker Belgium Meetup" title="Docker Belgium Meetup" />
-                <p></p>
-                <p>To be announced</p>
-                <p><a class="btn btn-default" href="#" role="button" disabled="disabled">Register</a></p>
+                <h3>Speakers</h3>
+                <ul>
+                    <li>Marcos Nils></li>
+                    <li>Michelangelo Van Dam</li>
+                    <li>Taylor Thomas</li>
+                </ul>
+                <p><a class="btn btn-default" href="https://www.meetup.com/Docker-Belgium/events/267904958" role="button">Register</a></p>
             </div>
         </div>
 
