--- a/roadtofosdem/index.html
+++ b/roadtofosdem/index.html
@@ -82,7 +82,7 @@
                     width="70%" alt="Docker Belgium Meetup" title="Docker Belgium Meetup" />
                 <h3>Speakers</h3>
                 <ul>
-                    <li>Marcos Nils></li>
+                    <li>Marcos Nils</li>
                     <li>Michelangelo Van Dam</li>
                     <li>Taylor Thomas</li>
                 </ul>
