Add Rotterdam event

--- a/roadtofosdem/index.html
+++ b/roadtofosdem/index.html
@@ -62,9 +62,13 @@
             </div>
             <div class="col-md-4">
                 <h2>Rotterdam (29/01)</h2>
-                <img class="img" src="" width="50%" />
-                <p>To be announced</p>
-                <p><a class="btn btn-default" href="#" role="button" disabled="disabled">Register</a></p>
+                <img class="img" src="https://secure.meetupstatic.com/photos/event/c/4/1/9/600_485630201.jpeg" width="50%" />
+                <h3>Speakers</h3>
+                <ul>
+                    <li>Taylor Thomas</li>
+                    <li>Jose Miguel Parrella</li>
+                </ul>
+                <p><a class="btn btn-default" href="https://www.meetup.com/dutch-cloud-meetup/events/267945087/" role="button" >Register</a></p>
             </div>
         </div>
         <div class="row">
