Update with Utrecht 28/1 meetup

--- a/roadtofosdem/index.html
+++ b/roadtofosdem/index.html
@@ -56,9 +56,16 @@
             </div>
             <div class="col-md-4">
                 <h2>Utrecht (28/01)</h2>
-                <img class="img" src="" width="50%" />
-                <p>To be announced</p>
-                <p><a class="btn btn-default" href="#" role="button" disabled="disabled">Register</a></p>
+                <img class="img" src="https://secure.meetupstatic.com/photos/event/2/5/f/1/highres_467529713.jpeg"
+                    width="50%" alt="DevOps Utrecht Meetup"
+                    title="DevOps Utrecht Meetup" />
+                <h3>Speakers</h3>
+                <ul>
+                    <li>Taylor Thomas</li>
+                    <li>Noah Berman</li>
+                </ul>
+                <p><a class="btn btn-default" href="https://www.meetup.com/nl-NL/devops_utrecht/events/268064012/"
+                        role="button" target="_blank">Register</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Rotterdam (29/01)</h2>
