Cancelled Utrecht meetup

--- a/roadtofosdem/index.html
+++ b/roadtofosdem/index.html
@@ -64,7 +64,7 @@
                     <li>Noah Berman</li>
                 </ul>
                 <p><a class="btn btn-default" href="https://www.meetup.com/nl-NL/devops_utrecht/events/268064012/"
-                        role="button" target="_blank">Register</a></p>
+                        role="button" target="_blank" disabled="disabled">Cancelled</a></p>
             </div>
             <div class="col-md-4">
                 <h2>Rotterdam (29/01)</h2>
